# microcontroller_starter

./: README.md  template.toml
{{ project_name }}/: Cargo.toml
{{ project_name }}/.cargo/: config.toml
{{ project_name }}/src/: lib.rs  main.rs
