[package]
authors = []
name = "{{ project_name }}"
edition = "2018"
version = "0.1.0"

[dependencies]
defmt = "0.2.1"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
{% if microcontroller == "nrf52840" %}
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
nrf52840-hal = "0.12.1"
{%- endif %}
embedded-hal = "0.2.4"
nb = "1.0.0"

[features]
default = [
  "defmt-default",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false